Set.of --> new HashSet() (caused exception cause of doubles)